<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">SWeight</string>

	<string name="EnterWeight">Enter weight</string>

    <string name="ErrorNoInput">Please enter a weight</string>
    <string name="ErrorUndefined">Something went horrible wrong!</string>
    <string name="Select">Select timespan:</string>
    <string-array name="selector_arrays">
        <item>3 days</item>
        <item>7 days</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 month</item>
        <item>6 month</item>
        <item>1 year</item>
        <item>All time</item>
    </string-array>
    <string name="selector_text">Choose span</string>
    <string name="ErrorNoData">No data in database</string>
    <string name="BadUpdate">Value not inserted in Database</string>
    <string name="EditBtn">Edit</string>
    <string name="dialog_message">Change weight</string>
    <string name="dialog_title">Change weight</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="WeightDialogText">Modify weight</string>
    <string name="WeightDialogHint">Set new weight</string>
    <string name="ErrorBadListPos">Error retrieving data</string>
    <string name="DatabaseData">Get entries</string>
    <string name="SeeGraph">See graph</string>
    <string name="weight_main_activity">Weight</string>
    <string name="weight_graph_activity">Weight in graph</string>
	<string name="action_settings">Settings</string>
	<string name="Weight">Weight</string>
	<string name="Enter">Enter</string>
	<string name="title_activity_main">Hvor er dette?</string>
</resources>
