<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WeightMain" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/EnterWeight"
		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="35dp"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
        
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
		    android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@+id/button1"
	        android:text="@string/Weight" />
	
	    <EditText
	        android:id="@+id/WeightEntry"
	        android:layout_width="100dp"
	        android:layout_height="match_parent"
	        android:layout_alignBottom="@+id/button1"
	        android:layout_alignTop="@+id/button1"
		    android:layout_toLeftOf="@+id/button1"
		    android:layout_toRightOf="@+id/textView2"
		    android:maxLines="1"
	        android:inputType="numberDecimal">
	        
	        	<requestFocus />
	        </EditText>
	    

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
        	android:layout_alignParentRight="true"
	        android:text="@string/Enter" 
	        android:onClick="OnAddClick"/>


	    
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="GetData"
            android:text="@string/DatabaseData"/>

        <Button
            android:id="@+id/btnGraph"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/SeeGraph"
            android:onClick="OnGraphClick"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/listLatestData" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
    </ListView>
</LinearLayout>

